cupt2 (2.0.0~alpha3~) UNRELEASED; urgency=low

  * lib:
    - cache/binaryversion:
      - 'parseFromFile': 10-25% speed-up.
    - file:
      - 'getRecord': removed parameter 'accepter'.
    - system/resolver:
      - 'operator=': forbidden now.
      - Reorganized *Reason struct, transformed to struct hierarchy.
    - system/worker:
      - 'operator=': forbidden now.
    - config:
      - Option 'cupt::resolver::max-solution-count': increased default value
        from 256 to 512.
  * debian:
    - rules:
      - Fixed installing bash completion script.

 -- Eugene Lyubimkin <ext-lyubimkin.eugene@nokia.com>  Tue, 16 Nov 2010 10:09:36 +0200

cupt2 (2.0.0~alpha2) UNRELEASED; urgency=low

  * console:
    - 'why': fixed infinite CPU and RAM usage when some of starting versions
      have a dependency cycle with any other version.
  * lib:
    - hashsums:
      - 'getStringHash': speed-up.
      - 'getStringHash': renamed to 'getHashOfString'.
      - 'getHashOfString': fixed crash on non-ASCII strings.
      - Use libgcrypt for hash computations.
    - cache:
      - Pre-parsing index files: really discard packages with broken package
        names.
      - 'operator=': forbidden now.
    - file:
      - 'getBlock': renamed to 'getRecord'.
      - destructor: check child exit status in a pipe mode.
    - common:
      - 'exception': renamed to 'Exception'.
    - system/resolvers/native:
      - Don't add new reason to an action which received unsatisfied soft
        dependency penalty.
    - config:
      - 'getNumber': renamed to 'getInteger'.
    - cache/version:
      - 'AvailableAsEntry': renamed to 'Source'.
      - 'availableAs': renamed to 'sources'.
    - download/progress:
      - 'progress': fixed nasty bug with wrong computing total download
        size when at least one download has an unknown size.
      - 'finish': renamed to 'finishHook' and moved to protected section.
      - 'getOverallEstimatedTime': now returns time since the start of the