@@ -102,9 +102,9 @@ class Worker
 	 * Marks a package as automatically or manually installed.
 	 *
 	 * @param packageName
-	 * @param targetStatus if @c true, marks as automatically installed, if @c false, marks as manually installed
+	 * @param value if @c true, marks as automatically installed, if @c false, marks as manually installed
 	 */
-	void markAsAutomaticallyInstalled(const string& packageName, bool targetStatus);
+	void setAutomaticallyInstalledFlag(const string& packageName, bool value);
 	void changeSystem(const shared_ptr< download::Progress >&);
 
 	void updateReleaseAndIndexData(const shared_ptr< download::Progress >&);
