@@ -10,6 +10,8 @@ cupt2 (2.0.0~alpha3~) UNRELEASED; urgency=low
       - Reorganized *Reason struct, transformed to struct hierarchy.
     - system/worker:
       - 'operator=': forbidden now.
+      - 'markAsAutomaticallyInstalled': renamed to
+        'setAutomaticallyInstalledFlag'.
     - config:
       - Option 'cupt::resolver::max-solution-count': increased default value
         from 256 to 512.
